--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,16 +13,16 @@
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/14/n12475476.md#1" title="【名家专栏】选民欺诈 谁在策划选举风暴""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1058239650-web-1200x716-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524856.md#1" title="【独家】内部文件解密美国在华“和平队”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1227754768-600x400-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://rmxaqt314.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529037.md#1">科学家首次确认神秘快速射电暴起源</a><br>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529089.md#1">【翻墙必看】大陆留学生在美进修地理的猫腻</a><br>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528899.md#1">拜登摇摆州比参议员多10万票 川普只多818张</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528607.md#1">泰国难民处境艰难 当地政府疑遭中共渗透</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529009.md#1">2020大选 新泽西深蓝州政治版图未变</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528819.md#1">美大选情势未定 中共3架军机再扰台</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528628.md#1">华为诉合作伙伴抢注商标案败诉</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529037.md#1">科学家首次确认神秘快速射电暴起源</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529089.md#1">【翻墙必看】大陆留学生在美进修地理的猫腻</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528899.md#1">拜登摇摆州比参议员多10万票 川普只多818张</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528607.md#1">泰国难民处境艰难 当地政府疑遭中共渗透</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529009.md#1">2020大选 新泽西深蓝州政治版图未变</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525523.md#1">李克强河南考察时 半空突传凄厉喊冤声</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525453.md#1">【中共百种酷刑】性摧残（上）</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525522.md#1">蚂蚁中港上市突喊停 业界分析背后恐不简单</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524572.md#1">蚂蚁被暂停上市 分析指大型集资威胁中共</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524549.md#1">美国大选开票 中共控制报导 网民议论纷纷</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br>
@@ -42,26 +42,25 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,935,138 人
+!共 366,935,664 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】川普宣布在宾州等三州获胜</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528082.md#1">密西根监票员爆料：实查7千票 却报出5万</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517535.md#1">【重播】川普讲话：选举须公正不留污点</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526344.md#1">川普团队对乔治亚州计票提诉讼 全美第三宗</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518396.md#1">【独家】中共派留学生赴美进修地理背后</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528162.md#1">【薇羽看世间】美大选现异常 谁在搅混水？</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526226.md#1">美媒：民主党欲窃取三个摇摆州的选举结果</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527954.md#1">【横河观点】从美大选异常看制度和人性</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521031.md#1">【内幕】高校内部文件泄中共无自信</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517535.md#1">【重播】川普讲话：选举须公正不留污点</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528082.md#1">密西根监票员爆料：实查7千票 却报出5万</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528476.md#1">【新闻看点】美大选诡异陷僵局 料另一场大战</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525453.md#1">【中共百种酷刑】性摧残（上）</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527706.md#1">美国大选总统未定 中共副外长急喊话</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525819.md#1">加州选民彻夜盯票 发现诡异现象疑作弊</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525522.md#1">蚂蚁中港上市突喊停 业界分析背后恐不简单</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529089.md#1">【翻墙必看】大陆留学生在美进修地理的猫腻</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528554.md#1">【远见快评】大选舞弊 民主党在豪赌？</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528685.md#1">川普支持者云集关键州 抗议计票不公</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528285.md#1">获前空姐分享贴心事 发哥下机前一句话超暖心</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528061.md#1">与李晨分手一年半 范冰冰到佛寺跪地或求姻缘</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528038.md#1">中共拟重判法轮功学员金玉红 律师：捏造罪名</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518396.md#1">【独家】中共派留学生赴美进修地理背后</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524926.md#1">【名家专栏】中共挑起 中美新冷战正上演</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527804.md#1">高瑜：中共红二代支持川普 批评拜登舞弊</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526176.md#1">蚂蚁集团暂缓上市 赵薇等明星被指亏大了</a><br>
@@ -105,8 +104,9 @@
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/29/n12509478.md#1">【独家】引进人才盗科技？中共手法曝光</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/30/n12513691.md#1">【名家专栏】专制主义与科技的未来</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/30/n12514422.md#1">【珍言真语】马仲仪：港康码将上路 免检有漏洞</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/30/n12514054.md#1">华为手机Q3出货量跌逾20% 三星跃居榜首</a><br>
 <br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528607.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528607.md#1">泰国难民处境艰难 当地政府疑遭中共渗透</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/22/n12494480.md#1">遭冤狱7年 高材生雷江涛再被构陷到检察院</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526965.md#1">转发一个视频 辽宁访民姜家文被拘留10天</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523613.md#1">邢鉴再揭信阳监狱黑幕 找牢头狱霸做假证</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521879.md#1">屡遭酷刑折磨 湖南法轮功学员张春秋再被冤判</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523701.md#1">访民北京乘公交车 遭乘务员通报警方截访</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528025.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/04/cf6894e8f3851c420a53877f600bdfc6-320x200.jpg"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528025.md#1">进博会规模缩水 习近平发言被指“空中画饼”</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527807.md#1">蚂蚁集团上市前夕喊停 众多散户蒙受损失</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527233.md#1">中共强停蚂蚁集团上市 国际投资者失去信心</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527014.md#1">筑商标护城河 海底捞1天申请177个相关商标</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12526055.md#1">成交量下降 大陆楼市传统旺季平淡收官</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524724.md#1">蚂蚁集团：不计息退回香港公开发售的申请股款</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529089.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1221997703-320x200.jpg"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529089.md#1">【翻墙必看】大陆留学生在美进修地理的猫腻</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528819.md#1">美大选情势未定 中共3架军机再扰台</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527383.md#1">国家能源局副局长被免职 多省能源局官员落马</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527139.md#1">专家：MQ-9B无人机创造台美协同作战空间</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526373.md#1">中国人翻墙观美选举 关切未来是否续施压中共</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525099.md#1">山东监狱系统曾爆疫情 王文杰等5人出庭受审</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524903.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524903.md#1">陕西铜川煤矿发生疑似瓦斯突出事故 4死4失踪</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524821.md#1">新疆喀什中共肺炎单日新增病例数再现新高</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521703.md#1">兰州卫健委给布病患者发健康证明 市民不满</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521218.md#1">兰州化工厂闪爆后油罐起火 浓烟直冲天际</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521167.md#1">国家管网北海LNG接收站失火 致6死3重伤</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521135.md#1">【一线采访视频版】上海大量实体店现倒闭潮</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526731.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526731.md#1">内蒙古幼儿园教师给幼儿扎针 3人被批捕</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526544.md#1">每日三退声明精选（2020/11/04）</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523746.md#1">齐齐哈尔市场遭强拆 民众批政府违法</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521263.md#1">黑龙江现病死猪肉交易 涉事司机逃逸</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521225.md#1">每日三退声明精选（2020/11/02）</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12519419.md#1">哈尔滨今年6万人被狗咬伤 狂犬疫苗告急</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524269.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/51e79b349dbd5a41127439c0769ad689-320x200.png"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524269.md#1">福建商学院副教授猥亵大一女生 女生反遭转学</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/30/n12513016.md#1">中共称将建文化强国 网民：它懂什么叫文化？</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/27/n12506230.md#1">汤唯开工第一天 公婆带全家人送应援车</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/27/n12504862.md#1">西安大一新生军训猝死 家属讨说法反被威胁</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/26/n12503856.md#1">高圆圆女儿抓周全场嗨翻 赵树海谈孙女眉飞色舞</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/25/n12501371.md#1">港星爆拍戏趣事：演员爱吃道具饭皆因周润发</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528607.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528607.md#1">泰国难民处境艰难 当地政府疑遭中共渗透</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/22/n12494480.md#1">遭冤狱7年 高材生雷江涛再被构陷到检察院</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526965.md#1">转发一个视频 辽宁访民姜家文被拘留10天</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523613.md#1">邢鉴再揭信阳监狱黑幕 找牢头狱霸做假证</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521879.md#1">屡遭酷刑折磨 湖南法轮功学员张春秋再被冤判</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523701.md#1">访民北京乘公交车 遭乘务员通报警方截访</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528628.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/fdbb766f36c36f847cde5d4e4f941b35-320x200.jpg"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528628.md#1">华为诉合作伙伴抢注商标案败诉</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528025.md#1">进博会规模缩水 习近平发言被指“空中画饼”</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527807.md#1">蚂蚁集团上市前夕喊停 众多散户蒙受损失</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527233.md#1">中共强停蚂蚁集团上市 国际投资者失去信心</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527014.md#1">筑商标护城河 海底捞1天申请177个相关商标</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528819.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/2011052143352378-320x200.jpg"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528819.md#1">美大选情势未定 中共3架军机再扰台</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527383.md#1">国家能源局副局长被免职 多省能源局官员落马</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527139.md#1">专家：MQ-9B无人机创造台美协同作战空间</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526373.md#1">中国人翻墙观美选举 关切未来是否续施压中共</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525099.md#1">山东监狱系统曾爆疫情 王文杰等5人出庭受审</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525090.md#1">第三届进博会 习近平首次不出席开幕式</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524903.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524903.md#1">陕西铜川煤矿发生疑似瓦斯突出事故 4死4失踪</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524821.md#1">新疆喀什中共肺炎单日新增病例数再现新高</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521703.md#1">兰州卫健委给布病患者发健康证明 市民不满</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521218.md#1">兰州化工厂闪爆后油罐起火 浓烟直冲天际</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521167.md#1">国家管网北海LNG接收站失火 致6死3重伤</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521135.md#1">【一线采访视频版】上海大量实体店现倒闭潮</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526731.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526731.md#1">内蒙古幼儿园教师给幼儿扎针 3人被批捕</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526544.md#1">每日三退声明精选（2020/11/04）</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523746.md#1">齐齐哈尔市场遭强拆 民众批政府违法</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521263.md#1">黑龙江现病死猪肉交易 涉事司机逃逸</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521225.md#1">每日三退声明精选（2020/11/02）</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12519419.md#1">哈尔滨今年6万人被狗咬伤 狂犬疫苗告急</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524269.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/51e79b349dbd5a41127439c0769ad689-320x200.png"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524269.md#1">福建商学院副教授猥亵大一女生 女生反遭转学</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/30/n12513016.md#1">中共称将建文化强国 网民：它懂什么叫文化？</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/27/n12506230.md#1">汤唯开工第一天 公婆带全家人送应援车</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/27/n12504862.md#1">西安大一新生军训猝死 家属讨说法反被威胁</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/26/n12503856.md#1">高圆圆女儿抓周全场嗨翻 赵树海谈孙女眉飞色舞</a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/25/n12501371.md#1">港星爆拍戏趣事：演员爱吃道具饭皆因周润发</a><br><br><p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/31/n12515304.md#1">【内幕】经营中美关系？盘点纽约统战组织(上)</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/25/n12500201.md#1">【独家】红三代揭武汉百亿假黄金局中局</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/22/n12493565.md#1">【独家】1年抗议逾百起 湛江防民如防川</a><br>
